fix: 下層ページMVのキャッチコピーを中央揃えからnowrapに変更 26.05.02

--- a/WordPressTheme/assets/css/style.css
+++ b/WordPressTheme/assets/css/style.css
@@ -2577,10 +2577,9 @@ a {
 	left: 50%;
 	padding: 0 0.5rem;
 	position: absolute;
-	text-align: center;
 	top: 50%;
 	transform: translate(-50%, -50%);
-	width: 100%;
+	white-space: nowrap;
 }
 
 .sub-mv__title {
